--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -254,7 +254,7 @@
   width: 90%;
   padding: .5em;
   top: 10%;
-  left: 8%;
+  left: 4%;
   border-radius: 15px;
 }
 
